# chips

./: README.md  chips-test-fips.yml
chips/: m6502_connomore64.h  m6522.h  m65c02.h
codegen/: m6502_gen.sh  m65c02_gen.py
docs/: 1541_test_demo.d64  1541_test_demo.g64  1541_test_demo.h  1541_test_demo_track18gcr.h
rp2040/: CMakeLists.txt  README.md  build.sh  c1541.c  cycle_tracing.h  iecbus_rp2.h
systems/: c1541.h  c1541_debug.h  c64.h  c64_debug.h  disass.h  disk_helpers.h  gcr.h  iecbus.h
tests/: Makefile  README.md  c64-ascii.c  c64_emulation_wrapper.c  fetch_roms.sh  package.json  rp2_test_runner.js  run_pc_version.sh  run_rp2040_version.sh  run_tests.sh
tests/utils/: convert_to_canonical_trace.py  gist_trace.py
ui/: ui_c64.h  ui_dbg.h
